# ReLink

./: .gitignore  README.md  latest.json  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: .gitignore  2  Cargo.toml  build.rs  installer.nsh  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/wix/: main.wxs
