[package]
name = "ReLink"
version = "0.2.4"
description = "App for unblocking Discord and YouTube"
authors = ["sviftcommunity"]
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "relink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
tauri-plugin-updater = "2.0.0-alpha"
winapi = { version = "0.3", features = ["processthreadsapi", "winbase", "errhandlingapi", "handleapi", "minwindef", "shellapi", "winuser"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
